오류 감지/출력 기능 추가